--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "mysql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;"
-  }
+    "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;"
+  },
+  "Jtw": "minimal-api-aula-dotnet"
 }
