feat: configurando Swagger para a passagem do token JWT

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;"
   },
-  "Jtw": "minimal-api-aula-dotnet"
+  "Jtw": "minimal-api-aula-dotnet-123456"
 }
